tests/NormalTests/paczka1/fuzzy1/40390266.err
Error in line 1: S259 A527 16,6
Error in line 3: S259 S259 69,2
Error in line 23: S259 S521 52,4
Error in line 26: S259 S259 17,3
Error in line 31: iTK S259 96,9
Error in line 28: lTj9hvkBjan A91 7,2
Error in line 33: S259 A91 62,4
